# shop_app/config/routes.rb
@@ -75,6 +75,7 @@ Rails.application.routes.draw do
          post '/create_comment_article' => 'comments_article#create_comment_article'
       end
       resources :checkouts
+      resources :favorites
     end
   end
 end
